<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>candle_ros</name>
  <version>1.1.0</version>
  <description>ROS node for interacting with MAB md80 drives using CANdle library.</description>
  <maintainer email="github@mabrobotics.pl">MAB Robotics</maintainer>
  <license>GNU Lesser General Public License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
